--- a/style.css
+++ b/style.css
@@ -1,26 +1,30 @@
 
-h1{
+body{
+    background-color:blanchedalmond
+}
+
+.homepage1 h1{
     font-size: 100px;
     font-family: "Courier New";
     color:darkgreen ;
     text-align: "center";
 }
 
-p{
+.homepage1 p{
     font-size: 50px;
     font-family: "Courier New";
     color:rgb(0, 0, 0) ;
     text-align: "center";
 }
 
-h2{
+.homepage1 h2{
     font-size:70px;
     font-family: "Courier New";
     color:rgb(49, 133, 63) ;
     text-align: "left";
 }
 
-ul{
+.homepage1 ul{
     font-size: 50px;
     font-family: "Courier New";
     color:rgb(0, 0, 0) ;
