--- a/style.css
+++ b/style.css
@@ -2,33 +2,35 @@
 body{
     background-color:blanchedalmond
 }
+*{
+    font-family:"Poppins";
+}
 
 .homepage1 h1{
     font-size: 100px;
-    font-family: "Courier New";
-    color:darkgreen ;
-    text-align: "center";
+    color:rgb(0, 51, 0) ;
+    text-align: center;
 }
 
 .homepage1 p{
-    font-size: 50px;
+    font-size: 30px;
     font-family: "Courier New";
     color:rgb(0, 0, 0) ;
-    text-align: "center";
+    text-align: center;
 }
 
 .homepage1 h2{
     font-size:70px;
     font-family: "Courier New";
-    color:rgb(49, 133, 63) ;
-    text-align: "left";
+    color:rgb(76, 139, 86) ;
+    text-align: left;
 }
 
 .homepage1 ul{
-    font-size: 50px;
+    font-size: 30px;
     font-family: "Courier New";
     color:rgb(0, 0, 0) ;
-    text-align: "left";
+    text-align: left;
 
 }
 
