--- a/style.css
+++ b/style.css
@@ -1,6 +1,39 @@
 
+/*NAV BAR*/
+
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #003b19;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: "Poppins";
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #bbb8b8;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #93ffae;
+    color: rgb(0, 0, 0);
+  }
+
+  
+/*HOMEPAGE */
 body{
-    background-color:rgb(255, 216, 159)
+    background-color:rgb(255, 230, 192)
 }
  
 .homepage1 h1{
@@ -31,5 +64,4 @@ body{
     text-align: left;
 
 }
-
 
