--- a/style.css
+++ b/style.css
@@ -1,62 +1,8 @@
 /*HOMEPAGE */
 body{
-    background-color: #000;
-    color: #fff;
-    min-height: 100vh;
-    display: grid;
-    place-items: center;
-    perspective: 500px;
-    perspective-origin: 50% calc(50% - 150px);
+    background-color: #f7ffcb;
 }
 
-.scene {
-    position: relative;
-    transform-style: preserve-3d;
-  }
-  
-  .banner {
-    display: flex;
-    transform-style: preserve-3d;
-    animation: rotate 24s infinite linear;
-  }
-  
-  @keyframes rotate {
-    to { transform: rotateY(-360deg); }
-  }
-  
-
-  .panel {
-    position: absolute;
-    transform: translate(-50%, -50%) rotateY(var(--angle)) translateZ(190px); 
-    width: 50px;
-    height: 120px;
-    overflow: hidden;
-  }
-  
-  .panel::before {
-    position: absolute;
-    left: var(--left);
-    content: "Botanify Tech";
-    font-size: 96px;
-    width: max-content;
-    color: hsl(var(--hue), 75%, 75%);
-  }
-  
-  
-  @for $i from 0 to 24 {
-    .panel:nth-child(#{$i + 1}) {
-      --left: #{$width * $i * -1};
-      --hue: #{360 / 24 * $i};
-      --angle: #{360deg / 24 * $i};
-    }
-  }
-  
-  .screen {
-    position: absolute;
-    width: 400px; height: 400px;
-    background-image: linear-gradient(90deg, #000a, #0004, #000a);
-    transform: translate(-50%, -50%);
-  }
 
 /*NAV BAR*/
 
@@ -85,8 +31,8 @@ body{
   
   /* Add a color to the active/current link */
   .topnav a.active {
-    background-color: #ffffff;
-    color: rgb(165, 159, 159);
+    background-color: #003603;
+    color: rgb(210, 255, 88);
   }
 
   
